--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "better-auth": "^1.2.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.43.1",
     "lucide-react": "^0.509.0",
     "next": "15.3.2",
