--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.6",
+    "@tanstack/react-query": "^5.90.6",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "@tiptap/extension-heading": "^3.4.1",
     "@tiptap/pm": "^3.2.0",
     "@tiptap/react": "^3.2.0",
@@ -48,6 +50,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@tanstack/eslint-plugin-query": "^5.91.2",
     "@types/node": "^20",
     "@types/pg": "^8.15.1",
     "@types/react": "^19",
