--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "@radix-ui/react-tooltip": "^1.2.6",
     "@tanstack/react-query": "^5.90.6",
     "@tanstack/react-query-devtools": "^5.90.2",
+    "@tiptap/extension-bullet-list": "^3.10.4",
     "@tiptap/extension-heading": "^3.4.1",
+    "@tiptap/extension-list-item": "^3.10.4",
+    "@tiptap/extension-ordered-list": "^3.10.4",
     "@tiptap/pm": "^3.2.0",
     "@tiptap/react": "^3.2.0",
     "@tiptap/starter-kit": "^3.2.0",
