--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tanstack/react-query": "^5.90.6",
     "@tanstack/react-query-devtools": "^5.90.2",
     "@tiptap/extension-bullet-list": "^3.10.4",
+    "@tiptap/extension-code-block-lowlight": "^3.10.5",
     "@tiptap/extension-heading": "^3.4.1",
     "@tiptap/extension-list-item": "^3.10.4",
     "@tiptap/extension-ordered-list": "^3.10.4",
@@ -38,6 +39,8 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.43.1",
+    "highlight.js": "^11.11.1",
+    "lowlight": "^3.3.0",
     "lucide-react": "^0.509.0",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
