--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "lucide-react": "^0.509.0",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
+    "nuqs": "^2.7.3",
     "pg": "^8.15.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
